@@ -22,7 +22,7 @@ https://sourceforge.net/tracker/?atid=712784&group_id=128809
 ---------------------------------
 [ 2192049 ] Potential memory leak in providerDrv.c
 [ 2189206 ] duplicate call CMNewObjectPath to profileProvider.c
-
+[ 2192073 ] Add thread information to trace output
 
 10/09/2008 by Luong Nguyen-Duy, Sun
 -----------------------------------
